added title and desc

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="As a lawyer with 8 years of experience, I specialize in Property Laws, Town Planning Laws, Cyber and Computer Laws. I have been practicing in the courts of Pune, as well as the PMRDA court. My expertise in these areas has allowed me to provide effective representation and guidance to clients in a variety of legal matters."
     />
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
     integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI="
@@ -30,7 +30,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Adv Rajan Ladkat</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
